# rswal

./: Cargo.toml
src/: cli.rs  color.rs  colors.rs  colorscheme.rs  config.rs  directories.rs  hook.rs  logger.rs  main.rs  os.rs  parser.rs  renderer.rs  template.rs  templater.rs  theme.rs  util.rs  yaml_parser.rs
