[package]
name = "rswal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "string"] }
env_logger = "0.10.0"
handlebars = "5.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
home = "0.5"
palette = "0.7.5"

[dev-dependencies]
tempfile = "3"
